ENH:NAV-48 - Expose timeType to REST-API.
