# src/main/java/ch/naviqore/app/dto/TimeType.java
@@ -1,0 +1,6 @@
+package ch.naviqore.app.dto;
+
+public enum TimeType {
+    DEPARTURE,
+    ARRIVAL
+}
